Adicionando opções de GC para o Marathon